<?xml version="1.0" encoding="UTF-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    tools:context=".MainActivity"
    android:background="#00e3e3"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <LinearLayout

        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:id="@+id/linearLayout">


        <!--输入输出-->
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/forAinput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/mianji"
                android:spinnerMode="dialog"
                android:background="#009393"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="#d9ffff"
                android:id="@+id/Ainput"
                android:hint="@string/input"
                android:ems="10"
                android:gravity="right"
                android:layout_gravity="center"/>
        </LinearLayout>
        <TextView
            android:layout_height="20dp"
            android:layout_width="match_parent"
            android:id="@+id/blank1" />
        <!--左边开始填充-->
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/forAoutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/mianji"
                android:spinnerMode="dialog"
                android:background="#009393"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="#d9ffff"
                android:id="@+id/Aoutput"
                android:hint="@string/output"

                android:ems="10"
                android:gravity="right"
                android:layout_gravity="center"/>
        </LinearLayout>
        <TextView
            android:layout_height="20dp"
            android:layout_width="match_parent"
            android:id="@+id/blank2" />
        <!--第一行按钮-->
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal">



            <Button
                android:background="#ff8040"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/Acls"
                android:text="@string/clear"
                android:layout_weight="1"
                />


            <Button
                android:background="#ff8040"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/Aback"
                android:text="@string/back"
                android:layout_weight="1"
                />


        </LinearLayout>

        <TextView
            android:layout_height="20dp"
            android:layout_width="match_parent"
            android:id="@+id/blank3"
            android:ems="10"/>



        <!--第2行按钮-->
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal">



            <Button
                android:background="#00caca"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/Aseven"
                android:text="@string/seven"
                android:layout_weight="1"
                />

            <Button
                android:background="#00caca"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/Aeight"
                android:text="@string/eight"
                android:layout_weight="1"
                />

            <Button
                android:background="#00caca"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/Anine"
                android:text="@string/nine"
                android:layout_weight="1"
                />



        </LinearLayout>

        <TextView
            android:layout_height="20dp"
            android:layout_width="match_parent"
            android:id="@+id/blank5"
            android:ems="10"/>
        <!--第3行按钮-->
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal">



            <Button
                android:background="#00caca"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/Afour"
                android:text="@string/four"
                android:layout_weight="1"
                />

            <Button
                android:background="#00caca"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/Afive"
                android:text="@string/five"
                android:layout_weight="1"
                />

            <Button
                android:background="#00caca"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/Asix"
                android:text="@string/six"
                android:layout_weight="1"
                />



        </LinearLayout>

        <TextView
            android:layout_height="20dp"
            android:layout_width="match_parent"
            android:id="@+id/blank6"
            android:ems="10"/>

        <!--第4行按钮-->
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal">


            <Button
                android:background="#00caca"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/Aone"
                android:text="@string/one"
                android:layout_weight="1"
                />

            <Button
                android:background="#00caca"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/Atwo"
                android:text="@string/two"
                android:layout_weight="1"
                />

            <Button
                android:background="#00caca"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/Athree"
                android:text="@string/three"
                android:layout_weight="1"
                />


        </LinearLayout>

        <TextView
            android:layout_height="20dp"
            android:layout_width="match_parent"
            android:id="@+id/blank7"
            android:ems="10"/>
        <!--第5行按钮-->
        <LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="horizontal">



            <Button
                android:background="#00caca"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/Abin"
                android:text="@string/pai"
                android:layout_weight="1"
                />

            <Button
                android:background="#00caca"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/Azero"
                android:text="@string/zero"
                android:layout_weight="1"
                />

            <Button
                android:background="#00caca"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/Adot"
                android:text="@string/dot"
                android:layout_weight="1"
                />



        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>